Fix: Display body as inline-block and remove unnecessary text-align

--- a/Simon/public/CSS/index.css
+++ b/Simon/public/CSS/index.css
@@ -1,12 +1,12 @@
 body {
     background-color: black;
+    display: inline-block;
 }
 
 .panel {
     width: 200px;
     height: 200px;
     display: inline-block;
-    text-align: center;
 }
 
 .bottom-right-panel {
